done with register user

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-mongodb+srv://mayankSingh:9507769566@cluster0.lriig.mongodb.net/food-del
+MONGO_DB=mongodb+srv://mayankSingh:9507769566@cluster0.lriig.mongodb.net/food-del
+JWT_SECRET="mnfgrjehvskfbruifhsdkafbuifhnlfieu"
